--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <meta property="twitter:description" content="Gérez votre entreprise de construction avec 27+ modules intégrés et 57 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png">
-    <link rel="apple-touch-icon" href="/logo.png">
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="apple-touch-icon" href="logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1450,7 +1450,7 @@
     <header class="header">
         <div class="header-inner">
             <a href="#" class="logo">
-                <img src="/logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
+                <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                 Constructo AI
             </a>
             <nav class="nav">
@@ -1492,7 +1492,7 @@
     <section class="hero">
         <div class="hero-inner">
             <div class="hero-logo">
-                <img src="/logo.png" alt="Constructo AI">
+                <img src="logo.png" alt="Constructo AI">
             </div>
             <h1>Constructo AI</h1>
             <p class="hero-subtitle">Le système ERP intelligent conçu pour la construction au Québec</p>
@@ -2208,7 +2208,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <a href="#" class="logo">
-                        <img src="/logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
+                        <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
                     <p>L'ERP intelligent conçu pour la construction au Québec. 27+ modules intégrés, 57 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16.</p>
