--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,7 @@
             <p>Regardez la démo de notre plateforme pour voir comment Constructo AI transforme votre gestion de projets de construction et accélère vos chantiers.</p>
             <div class="video-wrapper">
                 <iframe
-                    src="https://www.youtube.com/watch?v=fvMsHDHKo1I"
+                    src="https://www.youtube.com/embed/fvMsHDHKo1I"
                     title="Constructo AI - Demo"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
