--- a/index.html
+++ b/index.html
@@ -1918,8 +1918,8 @@
                 <div class="footer-section">
                     <h4>Siège social</h4>
                     <p style="font-size: 13px; color: var(--gray-500); line-height: 1.6;">
-                        1760 Rue Jacques-Cartier S<br>
-                        Farnham, QC J2N 1Y8<br>
+                        1760, rue Jacques-Cartier Sud<br>
+                        Farnham (Québec) J2N 1Y8<br>
                         Canada
                     </p>
                 </div>
