--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Constructo AI | ERP intelligent pour la construction au Québec - 27+ modules, 57 experts IA</title>
-    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. 27+ modules intégrés (Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire), 57 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai 7 jours.">
+    <title>Constructo AI | ERP intelligent pour la construction au Québec - 30+ modules, 60 experts IA</title>
+    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. 30+ modules intégrés (Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire, Subventions), 60 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai 7 jours.">
     <meta name="keywords" content="ERP construction, logiciel construction Québec, gestion projet construction, devis construction, comptabilité construction, RBQ, CCQ, Loi 16, IA construction, Constructo AI">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
     <meta name="robots" content="index, follow">
@@ -13,14 +13,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://constructoai.ca/">
     <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta property="og:description" content="Gérez votre entreprise de construction avec 27+ modules intégrés et 57 experts IA. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
+    <meta property="og:description" content="Gérez votre entreprise de construction avec 30+ modules intégrés et 60 experts IA. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
     <meta property="og:image" content="https://constructoai.ca/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://constructoai.ca/">
     <meta property="twitter:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta property="twitter:description" content="Gérez votre entreprise de construction avec 27+ modules intégrés et 57 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
+    <meta property="twitter:description" content="Gérez votre entreprise de construction avec 30+ modules intégrés et 60 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo.png">
@@ -1314,7 +1314,7 @@
             <h1>Constructo AI</h1>
             <p class="hero-subtitle">Le système ERP intelligent conçu pour la construction au Québec</p>
             <p class="hero-description">
-                Gérez l'ensemble de votre entreprise de construction avec 27+ modules intégrés: Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire et plus. Propulsé par 57 experts IA spécialisés et 100% conforme aux normes RBQ, CCQ et Loi 16.
+                Gérez l'ensemble de votre entreprise de construction avec 30+ modules intégrés: Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire, Subventions Québec et plus. Propulsé par 60 experts IA spécialisés et 100% conforme aux normes RBQ, CCQ et Loi 16.
             </p>
             <div class="hero-buttons">
                 <a href="https://app.constructoai.ca/" class="btn btn-primary">
@@ -1336,15 +1336,15 @@
 
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">27+</div>
+                    <div class="stat-number">30+</div>
                     <div class="stat-label">Modules intégrés</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">180+</div>
+                    <div class="stat-number">195+</div>
                     <div class="stat-label">Tables de données</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">57</div>
+                    <div class="stat-number">60</div>
                     <div class="stat-label">Experts IA spécialisés</div>
                 </div>
                 <div class="stat-item">
@@ -1434,7 +1434,7 @@
     <!-- Solution Section -->
     <section class="solution-section" id="fonctionnalites">
         <div class="solution-inner">
-            <h2 class="section-title">27+ Modules Intégrés</h2>
+            <h2 class="section-title">30+ Modules Intégrés</h2>
             <p class="section-subtitle">Une solution complète pour gérer tous les aspects de votre entreprise de construction</p>
             <h3>Vos outils au quotidien</h3>
 
@@ -1541,7 +1541,7 @@
                     <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
                     <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                 </svg>
-                57 Experts IA Spécialisés Construction
+                60 Experts IA Spécialisés Construction
             </h2>
             <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Propulsés par Claude Opus 4.5 d'Anthropic avec 26 311 lignes de documentation spécialisée</p>
             <div class="experts-grid">
@@ -1570,7 +1570,7 @@
                     <strong>Calculs Poutres</strong> - <span>Sélection linteaux et poutres avec code Python intégré, calculs automatisés selon les charges.</span>
                 </div>
             </div>
-            <p class="experts-more">+ 49 autres experts: Électricien, Plombier, CVC, Toiture, Isolation, Maçonnerie, Menuiserie, Peinture, Céramique, Pavage...</p>
+            <p class="experts-more">+ 52 autres experts: Électricien, Plombier, CVC, Toiture, Isolation, Maçonnerie, Menuiserie, Peinture, Céramique, Pavage, Subventions...</p>
         </div>
     </section>
 
@@ -1729,7 +1729,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>L'abonnement de 139.99$/mois inclut: accès complet aux 27+ modules ERP (CRM, Devis, Comptabilité, TimeTracker, Inventaire, etc.), 57 profils d'experts IA spécialisés construction, espace entreprise privé et sécurisé (multi-tenant PostgreSQL), support technique, mises à jour automatiques et hébergement cloud sur Render. Utilisateurs illimités!</p>
+                    <p>L'abonnement de 139.99$/mois inclut: accès complet aux 30+ modules ERP (CRM, Devis, Comptabilité, TimeTracker, Inventaire, Subventions Québec, etc.), 60 profils d'experts IA spécialisés construction, espace entreprise privé et sécurisé (multi-tenant PostgreSQL), support technique, mises à jour automatiques et hébergement cloud sur Render. Utilisateurs illimités!</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -1756,7 +1756,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Non! La clé API Claude (Anthropic) est incluse dans votre abonnement de 139.99$/mois. Vous avez accès immédiatement aux 57 experts IA spécialisés, à la recherche web et à l'analyse de documents sans aucune configuration supplémentaire.</p>
+                    <p>Non! La clé API Claude (Anthropic) est incluse dans votre abonnement de 139.99$/mois. Vous avez accès immédiatement aux 60 experts IA spécialisés, à la recherche web et à l'analyse de documents sans aucune configuration supplémentaire.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -1883,7 +1883,7 @@
                         <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
-                    <p>L'ERP intelligent conçu pour la construction au Québec. 27+ modules intégrés, 57 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16.</p>
+                    <p>L'ERP intelligent conçu pour la construction au Québec. 30+ modules intégrés, 60 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Navigation</h4>
