--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,10 @@
             <h1>Constructo AI</h1>
             <p class="hero-subtitle">Le système ERP intelligent conçu pour la construction au Québec</p>
             <p class="hero-description">
-                Gérez l'ensemble de votre entreprise de construction avec 30+ modules intégrés: Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire, Subventions Québec et plus. Propulsé par 60 experts IA spécialisés et 100% conforme aux normes RBQ, CCQ et Loi 16.
+                Gérez l'ensemble de votre entreprise de construction avec <strong>30+ modules intégrés</strong>: Devis & Soumissions, Gestion de Projets, Comptabilité complète (TPS/TVQ), TimeTracker (61 postes CCQ), CRM & Pipeline de ventes, Inventaire temps réel, Subventions Québec 2025 (50+ programmes), Qualification prospects B.A.T., Fonds de prévoyance (Loi 16), Gantt interactif, Kanban agile, Portail B2B client et plus encore.
+            </p>
+            <p class="hero-description" style="margin-top: -15px;">
+                Propulsé par <strong>60 experts IA spécialisés</strong> (Claude Opus 4.5) et <strong>100% conforme</strong> aux normes RBQ, CCQ, CNESST et Loi 16. Architecture multi-tenant sécurisée avec 195+ tables PostgreSQL.
             </p>
             <div class="hero-buttons">
                 <a href="https://app.constructoai.ca/" class="btn btn-primary">
