--- a/index.html
+++ b/index.html
@@ -1564,30 +1564,6 @@
                 <a href="#contact">Contact</a>
             </nav>
             <div class="header-right">
-                <div class="lang-select">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="12" cy="12" r="10"/>
-                        <line x1="2" y1="12" x2="22" y2="12"/>
-                        <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
-                    </svg>
-                    <span>Français</span>
-                    <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M6 9l6 6 6-6"/>
-                    </svg>
-                </div>
-                <button class="theme-toggle">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="12" cy="12" r="5"/>
-                        <line x1="12" y1="1" x2="12" y2="3"/>
-                        <line x1="12" y1="21" x2="12" y2="23"/>
-                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
-                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
-                        <line x1="1" y1="12" x2="3" y2="12"/>
-                        <line x1="21" y1="12" x2="23" y2="12"/>
-                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
-                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
-                    </svg>
-                </button>
                 <a href="https://app.constructoai.ca/" class="btn btn-primary">Mon compte</a>
             </div>
         </div>
@@ -1837,7 +1813,7 @@
             <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Posez n'importe quelle question technique — prix, normes, méthodes — et obtenez une réponse de gars de métier, pas de vendeur</p>
             <div class="experts-grid">
                 <div class="expert-item">
-                    <strong>Entrepreneur Général</strong> - <span>40 ans d'expérience. Estimation détaillée 225-550$/pi² avec ventilation main-d'œuvre/matériaux. Code de construction, Novoclimat, LEED. Coordination des 10 corps de métier.</span>
+                    <strong>Entrepreneur Général</strong> - <span>Estimation détaillée 225-550$/pi² avec ventilation main-d'œuvre/matériaux. Code de construction, Novoclimat, LEED. Coordination des 10 corps de métier.</span>
                 </div>
                 <div class="expert-item">
                     <strong>Plombier</strong> - <span>Licence RBQ maître plombier, membre CMMTQ. Code de plomberie du Québec, chauffage hydronique, planchers radiants, certifié gaz naturel/propane. Liste de prix intégrée.</span>
@@ -1846,10 +1822,10 @@
                     <strong>Électricien</strong> - <span>Licence RBQ maître électricien, CMEQ, formation Hydro-Québec. Panneaux 100A-200A, bornes de recharge VÉ, panneaux solaires, domotique. Prix matériaux 2025.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Revêtement Extérieur</strong> - <span>40 ans au Québec. Écran pare-pluie, vinyle, fibrociment, brique, pierre. Ventilation cavité, drainage intégré, jonctions critiques. Normes manufacturiers.</span>
+                    <strong>Revêtement Extérieur</strong> - <span>Écran pare-pluie, vinyle, fibrociment, brique, pierre. Ventilation cavité, drainage intégré, jonctions critiques. Normes manufacturiers.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Finition Intérieure</strong> - <span>35+ ans, ASP Construction, cartes CCQ. Gypse niveaux 1-5, tirage de joints machine, planchers bois franc/LVP, moulures, faux-finis artistiques.</span>
+                    <strong>Finition Intérieure</strong> - <span>ASP Construction, cartes CCQ. Gypse niveaux 1-5, tirage de joints machine, planchers bois franc/LVP, moulures, faux-finis artistiques.</span>
                 </div>
                 <div class="expert-item">
                     <strong>Structure de Bois</strong> - <span>Expert CSA O86. Poutrelles, fermes de toit, murs préfabriqués, poutres LVL. Calcul des charges résidentiel/commercial, optimisation des coûts. Liste de prix complète intégrée.</span>
@@ -1875,8 +1851,8 @@
     <!-- Demo Section -->
     <section class="demo-section" id="demo">
         <div class="demo-inner">
-            <h2>Voyez comment ça marche sur un vrai projet</h2>
-            <p>Regardez comment un entrepreneur comme vous utilise Constructo AI au quotidien — de la soumission jusqu'au dernier paiement du client.</p>
+            <h2>Découvrez Constructo AI en action</h2>
+            <p>Découvrez les fonctionnalités principales de Constructo AI — soumissions, suivi de projets, facturation, pointage et bien plus.</p>
             <div class="video-wrapper">
                 <iframe
                     src="https://www.youtube.com/embed/fvMsHDHKo1I"
@@ -2195,7 +2171,7 @@
                     <ul>
                         <li>
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9 12l2 2 4-4"/></svg>
-                            Compte créé en 2 minutes, sans carte de crédit
+                            Compte créé en 2 minutes
                         </li>
                         <li>
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9 12l2 2 4-4"/></svg>
@@ -2215,12 +2191,12 @@
                             <line x1="3" y1="9" x2="21" y2="9"/>
                             <line x1="9" y1="21" x2="9" y2="9"/>
                         </svg>
-                        <h3>Démo avec vos vrais projets (Recommandé)</h3>
+                        <h3>Démo de 60 min avec vos vrais projets</h3>
                     </div>
                     <ul>
                         <li>
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#2563eb" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9 12l2 2 4-4"/></svg>
-                            30 minutes avec Sylvain, entrepreneur lui-même
+                            60 minutes avec Sylvain, fondateur de Constructo AI
                         </li>
                         <li>
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#2563eb" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9 12l2 2 4-4"/></svg>
@@ -2231,7 +2207,7 @@
                             Voyez le résultat sur VOS chiffres
                         </li>
                     </ul>
-                    <a href="#demo" class="btn btn-primary">Réserver ma démo</a>
+                    <a href="mailto:info@constructoai.ca?subject=Demande de démo 60 min" class="btn btn-primary">Écrivez à info@constructoai.ca</a>
                 </div>
             </div>
 
@@ -2242,7 +2218,7 @@
                     </svg>
                     <h3>Zéro risque, zéro engagement</h3>
                 </div>
-                <p>J'ai bâti Constructo AI parce que j'en avais besoin moi-même sur mes chantiers. Si ça ne vous aide pas, vous ne payez rien. Point final.</p>
+                <p>J'ai bâti Constructo AI car vous en aviez besoin — pour diminuer votre stress quotidien, reprendre le contrôle de vos projets et passer moins de temps sur la paperasse. Votre succès, c'est notre mission.</p>
             </div>
         </div>
     </section>
