--- a/index.html
+++ b/index.html
@@ -2300,7 +2300,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2025 Constructo AI Inc. - Tous droits réservés | Bâti avec fierté au Québec par Sylvain Leduc</p>
+                <p>© 2025 Constructo AI - Tous droits réservés | Développé par Sylvain Leduc</p>
             </div>
         </div>
     </footer>
