--- a/index.html
+++ b/index.html
@@ -2041,7 +2041,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Oui, vous annulez quand vous voulez — un appel au <strong>(514) 820-1972</strong> ou un courriel et c'est fait. Pas de contrat à long terme, pas de pénalité. Vos données restent disponibles 30 jours pour les exporter si vous en avez besoin.</p>
+                    <p>Oui, vous annulez quand vous voulez — directement dans votre compte en un clic. Pas de contrat à long terme, pas de pénalité. Vous conservez l'accès jusqu'à la fin de votre période actuelle et vous pouvez vous réabonner à tout moment.</p>
                 </div>
             </div>
         </div>
