--- a/index.html
+++ b/index.html
@@ -2032,7 +2032,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Non. 139.99$/mois, point final. Pas de frais de setup, pas de frais par utilisateur, pas de frais pour l'IA. 7 jours d'essai pour tester (carte de crédit requise mais pas de charge si vous annulez). Et SEAOP (appels d'offres) est 100% gratuit, même sans abonnement.</p>
+                    <p>Non. 139.99$ + tx/mois, point final. Pas de frais de setup, pas de frais par utilisateur, pas de frais pour l'IA. 7 jours d'essai pour tester (carte de crédit requise mais pas de charge si vous annulez). Et SEAOP (appels d'offres) est 100% gratuit, même sans abonnement.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -2041,7 +2041,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Oui, vous annulez quand vous voulez — directement dans votre compte en un clic. Pas de contrat à long terme, pas de pénalité. Vous conservez l'accès jusqu'à la fin de votre période actuelle et vous pouvez vous réabonner à tout moment.</p>
+                    <p>Oui, vous annulez quand vous voulez — directement dans votre compte en un clic. Pas de contrat à long terme, pas de pénalité. Vous conservez l'accès complet jusqu'à la fin de votre période actuelle. Après, vos données restent accessibles en lecture seule — vous pouvez consulter et exporter, mais pas créer ou modifier. Vous pouvez vous réabonner à tout moment pour retrouver l'accès complet.</p>
                 </div>
             </div>
         </div>
