--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Constructo AI | ERP intelligent pour la construction au Québec - 30+ modules, 60 experts IA</title>
+    <title>Constructo AI</title>
     <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. 30+ modules intégrés (Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire, Subventions), 60 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai 7 jours.">
     <meta name="keywords" content="ERP construction, logiciel construction Québec, gestion projet construction, devis construction, comptabilité construction, RBQ, CCQ, Loi 16, IA construction, Constructo AI">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
